updates to deploy to heroku

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,8 +14,8 @@
     <button mat-button style=background:white;margin:1em (click)="route('p')">{{'PRINCIPLES'|translate}}</button>
     <button mat-button style=background:white;margin:1em (click)="route('a')">Media</button>
 
-    <a mat-button style=background:white;margin:1em href="https://actionnetwork.org/forms/join-the-rebellion-3/?fbclid=IwAR0RbLD_oqYazl874FLCqcHvXlSDCUS7AmCHWbs4iSkVTljSShmFbmHluRE">{{'JOIN'|translate}}</a>
-    
+    <!-- <a mat-button style=background:white;margin:1em href="https://actionnetwork.org/forms/join-the-rebellion-3/?fbclid=IwAR0RbLD_oqYazl874FLCqcHvXlSDCUS7AmCHWbs4iSkVTljSShmFbmHluRE">{{'JOIN'|translate}}</a> -->
+    <a mat-button style=background:white;margin:1em href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link">{{'JOIN'|translate}}</a>
   </div>  
   
 </div>
@@ -23,6 +23,15 @@
 
 
 <router-outlet></router-outlet>
+
+<div style=height:20em;background:black;>
+  <div style=text-align:center;padding-top:3em>
+    <a href="#" class="fa fa-facebook"></a>
+    <a href="#" class="fa fa-twitter"></a>
+    <a href="#" class="fa fa-youtube"></a>
+    <a href="#" class="fa fa-instagram"></a>
+  </div>
+</div>
 
 
 
