--- a/src/app/media/media.component.html
+++ b/src/app/media/media.component.html
@@ -1,10 +1,7 @@
 
 
-<div style=height:15em;display:flex>
-  <img style=height:15em;float:left src="https://storage.googleapis.com/xrcanada/45975892981_51ebc9f5c2.jpg">
-  <h1 style=text-align:center;padding-top:3em;color:rgb(59,56,71);width:-webkit-fill-available>MEDIA</h1>
-  <img style=height:15em;float:right src="https://storage.googleapis.com/xrcanada/45975892981_51ebc9f5c2.jpg">
-
+<div class=graffiti style=height:15em>
+  <h1 style=text-align:center;padding-top:1em;margin-top:0;color:white;font-size:60px>{{'MEDIA'|translate}}</h1>
 </div>
 
 <div style=text-align:center>
