--- a/src/app/who/who.component.html
+++ b/src/app/who/who.component.html
@@ -3,49 +3,52 @@
 
 <div style=margin-right:15%;margin-left:15%;text-align:center;color:rgb(59,56,71)>
     <br><br>
-    <h1>ORIGINES D’EXTINCTION REBELLION</h1><br><br>
+    <h1>{{'ORIGINS'|translate}}</h1><br><br>
 
-    <strong> 2016, UK :</strong> création de RisingUp !, dont Extinction Rebellion est une campagne.
+    <strong> {{'WHO_1_DATE'|translate}}</strong>{{'WHO_1'|translate}} 
     <br><br>
 
-    <strong>2018, UK :</strong> lancement public d’Extinction Rebellion : organisation, formations, rencontres, etc. se succèdent à grande allure pendant des mois de préparation.
+    <strong>{{'WHO_2_DATE'|translate}}</strong>{{'WHO_2'|translate}} 
     <br><br>
 
-    <strong>31 octobre 2018 :</strong>déclaration de rébellion d’Extinction Rebellion à Londres sur le Parliament Square. Un millier de personnes y participent (dont la jeune Suédoise Greta Thunberg, une journaliste de la BBC et la députée du Parti écologique anglais)
+    <strong>{{'WHO_3_DATE'|translate}}</strong>{{'WHO_3'|translate}}
     <br><br>
 
-    <strong>17 novembre 2018 :</strong> action de blocage des cinq principaux ponts de Londres (plusieurs milliers de participants) ; c’est le « plus grand mouvement de désobéissance civile depuis des décennies » selon le Guardian (17/11/2018).
+    <strong>{{'WHO_4_DATE'|translate}}</strong>{{'WHO_4'|translate}} 
     <br><br>
 
-    Extinction Rebellion prépare actuellement la « Semaine internationale de la rébellion », prévue du 15 au 21 avril 2019 (« International Rebellion Week ».)
+    {{'WHO_WEEK'|translate}}
     <br><br><br><br>
 
-    <h1>DÉBUTS D’EXTINCTION REBELLION FRANCE</h1><br><br>
-    <strong>Novembre 2018 :</strong> début d’Extinction Rebellion France (ou XR France en abrégé), suite à l’appel d’Extinction Rebellion UK pour la diffusion internationale du mouvement.
+    <h1>{{'WHO_BEGINS'|translate}}</h1><br><br>
+    <strong>{{'WHO_4_DATE'|translate}}</strong> 
+    {{'WHO_BEGINS_TEXT'|translate}}
     <br><br>
 
-    Mise en place d’outils en ligne sécurisés pour que les personnes intéressées puissent rejoindre Extinction Rebellion France et participer à sa création. Reflet des valeurs de décentralisation et d’horizontalité portées par XR, ces outils sont pensés pour que l’organisation soit généralisable aux groupes locaux constituant le mouvement. À la mi-janvier 2019, XR France compte plus de 900 membres.
+    {{'WHO_TOOLS'|translate}}
     <br><br><br><br>
 
-    <h1>XR À L’INTERNATIONAL</h1><br><br>
+    <h1>{{'WHO_XR_INTERNATIONAL'|translate}}</h1><br><br>
 
-    XR dans le monde : https://xrblog.org/2018/12/02/extinction-rebellion-worldwide-map/
+    {{'WHO_XR_WORLD'|translate}} https://xrblog.org/2018/12/02/extinction-rebellion-worldwide-map/
     <br><br>
 
-    Depuis novembre 2018 (appel d’Extinction Rebellion UK à l’international), des mouvements se sont formés aux USA, en Italie, en Allemagne, en Australie, en Nouvelle-Zélande et sont déjà dotés de page Web. D’autres branches sont en cours de formation (Espagne, Belgique, Portugal, Brésil, Colombie, Suède, Inde…)
+    {{'WHO_SINCE'|translate}}
     <br><br>
 
-    Le site Internet Extinction Rebellion International (https://xrebellion.org/) permet à chaque personne de se joindre au mouvement, même si elle ne trouve pas de branche locale.
+    {{'WHO_SITE'|translate}}
     <br><br><br><br>
 
-    <h1>LOGO ET NOM</h1><br><br>
-    Le mouvement a adopté le symbole de l’extinction de masse en cours (http://extinctionsymbol.info/). Il représente un sablier au milieu de la Terre indiquant que le temps est compté pour de nombreuses espèces (selon les Nations Unies, une espèce disparaît toutes les 8 minutes). Il forme aussi le X de XR.
-    Logo d'XR
+    <h1>{{'WHO_LOGO_NAME'|translate}}</h1><br><br>
+
+    {{'WHO_MOVE'|translate}}
+
+    {{'XR_LOGO'|translate}}
     <br><br>
 
     <img src="https://extinctionrebellion.fr/assets/img/logo-xr.png">
     <br><br>
     
-    Le vert pour le combat écologique et le noir pour la gravité (couleur du deuil : espèces qui disparaissent chaque jour).
+    {{'WHO_GREEN'|translate}}
   <br><br>
 </div>
