--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,50 +1,59 @@
-<div class=skulls style=height:15em>
-  <h1 style=color:#3aaa37;text-align:center;margin:0;padding-top:0.5em;font-size:120px>XR CANADA</h1>
-</div>
-  
-  
-<br><br><br>
-<h1 style=text-align:center> {{'MAIN_TITLE'|translate}}
-</h1>
-
-<h4 style=margin-right:15%;margin-left:15%;line-height:1.5em;font-size:larger;color:rgb(59,56,71)>
-  {{'MAIN_1'|translate}}
-  {{'MAIN_2'|translate}}
-</h4>
-
-<br><br>
-<h1 style=margin-right:15%;margin-left:15%;text-align:center;color:#3aaa37;font-size:48px>
-  {{'MAIN_3'|translate}}
-</h1>
-
-<br><br>
-
-<div style="background-color:rgb(18, 169, 214);height:30em">
-
-  <div style=height:50%;display:flex>
-    <h4 style=font-size:large;padding-top:1em;color:white;width:33vw;text-align:center>{{'BLUE_1'|translate}}</h4>
-    <img style=width:33vw;height:100%; src="https://storage.googleapis.com/xrcanada/greta_blue.png">
-    <h4 style=font-size:large;padding-top:1em;color:white;width:33vw;text-align:center>{{'BLUE_3'|translate}}</h4>
-  </div>
-
-  <div style=height:50%;display:flex>
-    <img style=width:33vw;height:100%;float:left src="https://storage.googleapis.com/xrcanada/reb4life_blue.png">
-    <h4 style=font-size:large;padding-top:1em;color:white;width:33vw;text-align:center>{{'BLUE_2'|translate}}</h4>
-    <img style=width:33vw;height:100%;float:right src="https://storage.googleapis.com/xrcanada/bye_earth.png">
-  </div>
-
+<div class=home__skulls style=height:15em>
+  <h1 class=home__hero>XR CANADA</h1>
 </div>
 
+<div class=home__section>
+  <h1 class=home__title>{{'MAIN_TITLE'|translate}}</h1>
 
-<div style=margin-right:15%;margin-left:15%;text-align:center>
-  <br><br>
-  <h4 style=margin-right:15%;margin-left:15%;font-size:x-large;line-height:1.5em;color:rgb(59,56,71)>
+  <p class=home__paragraph>
+    {{'MAIN_1'|translate}}
+    {{'MAIN_2'|translate}}
+  </p>
+</div>
+
+<div class=home__greenTitle>
+  <h1>
+    {{'MAIN_3'|translate}}
+  </h1>
+</div>
+
+<div class=home__boxes>
+
+  <div class=home__boxes__row>
+    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_1'|translate}}</h3></div>
+    <div class="home__boxes__box home__boxes__box--img home__boxes__box--greta"></div>
+  </div>
+
+  <div class=home__boxes__row>
+    <div class="home__boxes__box home__boxes__box--img home__boxes__box--rebel"></div>
+    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_3'|translate}}</h3></div>
+  </div>
+
+  <div class=home__boxes__row>
+    <div class="home__boxes__box home__boxes__box--text"><h3>{{'BLUE_2'|translate}}</h3></div>
+    <div class="home__boxes__box home__boxes__box--img home__boxes__box--bye"></div>
+  </div>
+
+</div>
+
+
+<div class=home__section>
+  <br>
+
+  <p class=home__paragraph>
     {{'MAIN_4'|translate}}
-  </h4>
+  </p>
+
   <br><br><br>
-  <a style="font-size:30px;font-weight:bold;color:rgb(255, 196, 0);margin-right:3em;cursor:pointer" (click)=join()><u>{{'JOIN_EMAIL'|translate}}</u></a>
-  <!-- <a style="font-size:30px;font-weight:bold;color:rgb(255, 217, 0);margin-right:3em;" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link">{{'JOIN_EMAIL'|translate}}</a> -->
-  <a style="font-size:30px;font-weight:bold;color:rgb(255, 196, 0)" href="https://xrblog.org/2018/12/02/extinction-rebellion-worldwide-map/">{{'FIND_LOCAL'|translate}}</a>
+
+  <div class=home__actions>
+    <a class=home__action (click)=join()>
+      <h3>{{'JOIN_EMAIL'|translate}}</h3>
+    </a>
+    <a class=home__action href="https://xrblog.org/2018/12/02/extinction-rebellion-worldwide-map/">
+      <h3>{{'FIND_LOCAL'|translate}}</h3>
+    </a>
+  </div>
+
 </div>
-<br><br><br>
 
