--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,11 +1,16 @@
 
+$black:     #111;
+
 $darkgray:  #111;
 $gray:      #666;
 $lightgray: #aaa;
 
+$green__dark:  #007626;
 $green:        #3aaa37;
-$green__light: #00aa37;
+$green__light: #4ac447;
+
 /* $yellow: #ffbe6b; */
+
 $yellow:              #ffd76e;
 $yellow__transparent: #ffd76e88;
 $darkyellow:          #C29728;
