--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -127,6 +127,7 @@
   font-size: 30px;
   color: rgb(255, 196, 0);
   text-decoration: underline;
+  cursor: pointer;
 }
 .home__action h3 {
   margin: 0;
