--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -53,6 +53,7 @@
 
   background-color: transparent;
   border: none;
+  outline: none;
   border-top: 5px solid transparent;
   border-bottom: 5px solid transparent;
   cursor: pointer;
