refactor main => home

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -47,9 +47,9 @@
   height: 50px;
 }
 .header__bar__link {
-  font-family: 'fucxed_capsregular', sans-serif;
-  font-size: 18px;
+  font-family: 'fucxed', sans-serif;
   text-transform: uppercase;
+  font-size: 18px;
 
   background-color: transparent;
   border: none;
