--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,8 +24,9 @@
 </div>
 <div class="header__fill"></div>
 
-
-<router-outlet></router-outlet>
+<main class="main">
+  <router-outlet></router-outlet>
+</main>
 
 <footer class="footer">
   <div class="footer__content">
