quebec: add content (untranslated)

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -48,10 +48,10 @@
 
   <div class=home__actions>
     <a class=home__action (click)=join()>
-      <h3>{{'JOIN_EMAIL'|translate}}</h3>
+      {{'JOIN_EMAIL'|translate}}
     </a>
     <a class=home__action href="https://xrblog.org/2018/12/02/extinction-rebellion-worldwide-map/">
-      <h3>{{'FIND_LOCAL'|translate}}</h3>
+      {{'FIND_LOCAL'|translate}}
     </a>
   </div>
 
