--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,9 +1,9 @@
-
 $black:     #111;
 
-$darkgray:  #111;
-$gray:      #666;
-$lightgray: #aaa;
+$darkergray:  #111;
+$darkgray:    #444;
+$gray:        #666;
+$lightgray:   #aaa;
 
 $green__dark:  #007626;
 $green:        #3aaa37;
