--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,4 +1,5 @@
-@import "../../styles/variables";
+@import "../../styles/_variables.scss";
+@import "../../styles/_mixins.scss";
 
 
 .home__skulls {
@@ -124,6 +125,7 @@
   margin-right: 3em;
 }
 .home__action {
+  @include header-font;
   font-size: 30px;
   color: rgb(255, 196, 0);
   text-decoration: underline;
