--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -1,91 +1,73 @@
+<div class="section">
+    <h1 class="text-center">XR QUEBEC</h1>
 
-<div style=text-align:center>
-    <h1 style=color:blue;font-size:72px>XR QUEBEC</h1>
+    <h2>SE REBELLER POUR <span class="text-green">LA VIE</span></h2>
 
-    <h4>Content Coming Soon!</h4>
-</div>
+    <p>Nous faisons face à une urgence mondiale sans précédent. Les gouvernements ont échoué à nous protéger malgré les solutions connues et préconisées. Il est donc de notre devoir d'agir au plus vite.</p>
 
-<div class="txt" style="color:#444;background-color: #fff;text-align: left;padding:30px">
-<div><h1>SE REBELLER POUR <font color="green">LA VIE</font></h1></div>
+    <h2>NOUS EXIGEONS :</h2>
+    <ol class="numbered-list">
+        <li>La reconnaissance de la gravité et de l’urgence des crises écologiques actuelles et une communication honnête sur le sujet.</li>
+        <li>La réduction immédiate des émissions de gaz à effet de serre pour atteindre la neutralité carbone en 2025, grâce à une réduction de la consommation et une descente énergétique planifiée. </li>
+        <li>L’arrêt immédiat de la destruction des écosystèmes océaniques et terrestres, à l’origine d’une extinction massive du monde vivant.</li>
+        <li>La création d’une assemblée citoyenne chargée de décider des mesures à mettre en place pour atteindre ces objectifs et garante d’une transition juste et équitable. </li>
+    </ol>
 
+    <h2>S'ENGAGER</h2>
+    <p>
+        Vous avez envie de rejoindre notre équipe d’organisation et faire avancer les choses ? <br>
+        Participer à organiser une action, former un groupe local sont autant de manières de s’engager pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés.<br><br>
+    </p>
 
-Nous faisons face à une urgence mondiale sans précédent. Les gouvernements ont échoué à nous protéger malgré les solutions connues et préconisées. Il est donc de notre devoir d'agir au plus vite.<br><br><br>
-<h2>NOUS EXIGEONS :</h2>
-<p> </p><h2>1 </h2> La reconnaissance de la gravité et de l’urgence des crises écologiques actuelles et une communication honnête sur le sujet.<p></p>
-<p> </p><h2>2 </h2> La réduction immédiate des émissions de gaz à effet de serre pour atteindre la neutralité carbone en 2025, grâce à une réduction de la consommation et une descente énergétique planifiée.  <p></p>
-<p> </p><h2>3 </h2> L’arrêt immédiat de la destruction des écosystèmes océaniques et terrestres, à l’origine d’une extinction massive du monde vivant.<p></p>
-<p> </p><h2>4 </h2> La création d’une assemblée citoyenne chargée de décider des mesures à mettre en place pour atteindre ces objectifs et garante d’une transition juste et équitable.  <p></p>
-<br>
-
-<h2>S'ENGAGER</h2>
-<br><br>
-Vous avez envie de rejoindre notre équipe d’organisation et faire avancer les choses ? <br>
-Participer à organiser une action, former un groupe local sont autant de manières de s’engager pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés.<br><br>
-</div>
-<div class="txt" style="color:#444;background-color: #fff;text-align: left;padding:30px">
-
-    <div>
-        <h1>
-            <a href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">Rejoignez nous</a>
-        </h1>
-        <!--form>
-            Nom:
-            <input type="text" name="familyName"><br>
-            Prénom:
-            <input type="text" name="givenName"><br>
-            Code postal:
-            <input type="text" name="postalCode"><br>
-            Courriel:
-            <input type="text" name="email"><br>
-            <input type="submit" onclick='/api/create-user'>
-        </form-->
-        (Rebels from outside Québec, please sign up at <a href="https://xrebellion.org">xrebellion.org</a>)
+    <div class="text-center">
+        <a class="h1" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">
+            Rejoignez nous
+        </a>
     </div>
     <br>
 
-</div>
+    <h2>Prenez l'initiative</h2>
 
-<div class="txt" style="color:#444;background-color: #fff;text-align: left;padding:30px">
-<!--h2>Calendrier</h2>
-<br><br>
-<h3>Assemblée générale - Université Concordia (Dimanche 3 Février 2019)</h3>
-<p>Réunion des membres de Extinction Rébellion Québec</p>
-<br/>
+    <p>
+        Créez un groupe local de confiance et inventez vos propres actions. Vous n'avez pas besoin de demander permission tant que vous êtes en accord avec nos principes et nos valeurs : <br> <a href="https://rebellion.earth/who-we-are/" target="_blank">https://rebellion.earth/who-we-are/</a>
+    </p>
 
-<h3>Declaration de Rébellion Canadienne (Jeudi 14 Février 2019) </h3>
-<p>Nous allons coordonner des actions de désobéissance civile pour attirer l'attention sur l'urgence climatique à laquelle nous faisons face.</p>
-<p>Contactez votre groupe Extinction Rébellion local pour le détail des actions. <a href="https://www.facebook.com/events/237959086954537" target="_blank"> Évènement Facebook </a></p>
-<br><br-->
+    <p>
+        Imprimez une affiche. Ces fichiers sont disponibles en copyleft, merci d'indiquer la source «Extinction rébellion Québec» le cas échéant:
+    </p>
 
-<h2>Prenez l'initiative</h2>
+    <ul>
+        <li><a href="https://extinctionrebellionmontreal.com/files/Extractivisme-print.pdf">Affiche 1 (L'extractivisme est un nihilisme)</a></li>
+        <li><a href="https://extinctionrebellionmontreal.com/files/Caterpillar-print.pdf">Affiche 2 (Les prochains c'est nous)</a></li>
+        <li><a href="https://extinctionrebellioncanada.com/files/Greta-Print-2.pdf"> Affiche 3 (Greta)</a></li>
+    </ul>
 
-<p>Créez un groupe local de confiance et inventez vos propres actions. Vous n'avez pas besoin de demander permission tant que vous êtes en accord avec nos principes et nos valeurs : <br> <a href="https://rebellion.earth/who-we-are/" target="_blank">https://rebellion.earth/who-we-are/</a></p>
+    <p>
+        Avec amour et rage,
+    </p>
+    <p>
+        Extinction Rébellion Québec
+    </p>
 
-<p>Imprimez une affiche. Ces fichiers sont disponibles en copyleft, merci d'indiquer la source «Extinction rébellion Québec» le cas échéant : <br> <a href="https://extinctionrebellionmontreal.com/files/Extractivisme-print.pdf">Affiche 1</a> <a href="https://extinctionrebellionmontreal.com/files/Caterpillar-print.pdf">Affiche 2</a> <a href="https://extinctionrebellioncanada.com/files/Greta-Print-2.pdf"> Affiche 3</a> <br> </p>
-
-<p>Avec amour et rage,<br>Extinction Rébellion Québec</p>
-<br>
-<br>
 
     <h2>Vidéos</h2>
     <ul>
-	    <li> <a href="https://www.youtube.com/watch?v=b2VkC4SnwY0&amp;t=2250s">Heading for extinction and what to do about it</a> </li>
-	    <li> <a href="https://www.youtube.com/watch?v=EAmmUIEsN9A">School strike for climate - save the world by changing the rules | Greta Thunberg | TEDxStockholm</a> </li>
-	    <li> <a href="https://www.youtube.com/watch?v=jAH3IQwHKag">Life inside Extinction Rebellion: 'We can't get arrested quick enough'</a></li>
-	    <li> <a href="https://www.youtube.com/watch?v=q6I7wuLDkyA">Mouvement "Extinction Rebellion" : la désobéissance civile s'organise à Londres</a></li>
-	    <li> <a href="https://www.ted.com/talks/chad_frischmann_100_solutions_to_climate_change">Ted Talk : 100 solutions au réchauffement climatique</a></li>
+        <li> <a href="https://www.youtube.com/watch?v=b2VkC4SnwY0&amp;t=2250s">Heading for extinction and what to do about it</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=EAmmUIEsN9A">School strike for climate - save the world by changing the rules | Greta Thunberg | TEDxStockholm</a> </li>
+        <li> <a href="https://www.youtube.com/watch?v=jAH3IQwHKag">Life inside Extinction Rebellion: 'We can't get arrested quick enough'</a></li>
+        <li> <a href="https://www.youtube.com/watch?v=q6I7wuLDkyA">Mouvement "Extinction Rebellion" : la désobéissance civile s'organise à Londres</a></li>
+        <li> <a href="https://www.ted.com/talks/chad_frischmann_100_solutions_to_climate_change">Ted Talk : 100 solutions au réchauffement climatique</a></li>
     </ul>
 
     <h2>Presse</h2>
-    <br>
-    <br>
-    <a href="mailto:presse.xrqc@protonmail.com"> Contactez-nous </a>
+    <p>
+        <a href="mailto:presse.xrqc@protonmail.com">Contactez-nous</a>
+    </p>
 
-</div>
-
-<div class="txt" style="color:#444;background-color: #fff;text-align: left;padding:30px">
     <h2>Ressources</h2>
-    <p> <a href="https://www.facebook.com/Extinction.Rebellion.QC/"> Facebook</a> </p>
-    <p> <a href="https://twitter.com/XR_Quebec">Twitter</a> </p>
-    <p> <a href="https://www.instagram.com/extinctionrebellion/"> Instagram</a> </p>
+    <ul>
+        <li> <a href="https://www.facebook.com/Extinction.Rebellion.QC/"> Facebook</a> </li>
+        <li> <a href="https://twitter.com/XR_Quebec">Twitter</a> </li>
+        <li> <a href="https://www.instagram.com/extinctionrebellion/"> Instagram</a> </li>
+    </ul>
 </div>
