--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -8,38 +8,51 @@
   font-style: normal;
 }
 
-.header-font, h1, h2, h3 {
+.header-font, h1, h2, h3, .h1, .h2, .h3 {
   font-family: 'fucxed', sans-serif;
   text-transform: uppercase;
 }
 
-h1 {
+.h1, .h2, .h3 {
+  display: block;
+}
+
+h1, h2, h3 {
+  color: $darkgray;
+  margin: .5em 0 .25em;
+}
+
+.h1, h1 {
   font-size: 3.5em;
   line-height: 1;
 }
 
-h2 {
+.h2, h2 {
   font-size: 2em;
   line-height: 1;
+  margin: 1.5em 0 1em;
 }
 
-h2 {
+.h3, h3 {
   font-size: 1.5em;
   line-height: 1;
 }
 
-h1, h2, h3 {
-  margin: .5em 0 .25em;
-}
 
 p {
   font-size: 18px;
 }
 
-.text-green {
-  color: var(--green);
+
+
+.text-center {
+  text-align: center;
 }
 
+
+.text-green {
+  color: $green;
+}
 .text-muted {
-  color: var(--lightgray);
+  color: $lightgray;
 }
