--- a/src/app/demands/demands.component.html
+++ b/src/app/demands/demands.component.html
@@ -1,80 +1,35 @@
 
 
-<div class=skulls style=height:15em>
-  <h1 style=text-align:center;padding-top:1em;margin-top:0;color:white;font-size:70px>{{'DEMANDS_TITLE'|translate}}</h1>
+<div class="demands__title">
+  <h1 class="text-center">{{'DEMANDS_TITLE_2'|translate}}</h1>
 </div>
 
-<br><br>
-<h3 style=text-align:center;font-size:30px;color:rgb(59,56,71)>{{'DEMANDS_TITLE_2'|translate}}
-  </h3>
-<div style=margin-right:15%;margin-left:20%;font-size:22px;font-weight:bold;color:rgb(59,56,71)>
-  <div style=display:flex;>
-    <h2 style=float:left;padding-right:2%>1</h2>
-    <p style=float:right;padding-left:3%> 
-      {{'DEMANDS_1'|translate}}
-      </p><br>
-  </div>
+<div class="section">
 
-  <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>2</h2>
-    <p style=float:right;padding-left:3%>
-      {{'DEMANDS_2'|translate}}
-    </p><br>
-  </div>
+  <ol class="numbered-list">
+    <li>
+      <h3>{{'DEMANDS_1_TITLE'|translate}}</h3>
+      <div class="text-large">{{'DEMANDS_1_DESCRIPTION'|translate}}</div>
+    </li>
+    <li>
+      <h3>{{'DEMANDS_2_TITLE'|translate}}</h3>
+      <div class="text-large">{{'DEMANDS_2_DESCRIPTION'|translate}}</div>
+    </li>
+    <li>
+      <h3>{{'DEMANDS_3_TITLE'|translate}}</h3>
+      <div class="text-large">{{'DEMANDS_3_DESCRIPTION'|translate}}</div>
+    </li>
+  </ol>
 
-  <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>3</h2>
-    <p style=float:right;padding-left:3%> 
-      {{'DEMANDS_3'|translate}}
-    </p>
-  </div>
 
-  <!-- <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>4</h2>
-    <p style=float:right;padding-left:3%> 
-      {{'DEMANDS_4'|translate}}
-    </p>
-  </div> -->
+  <br><br>
+
+  <h2 class="text-center">{{'MORE_DETAILS'|translate}}</h2>
+
+  <ol class="numbered-list">
+    <li>{{'DETAILS_1'|translate}}</li>
+    <li>{{'DETAILS_2'|translate}} </li>
+    <li>{{'DETAILS_3'|translate}}</li>
+  </ol>
+
 </div>
-
-
-<br><br>
-
-<h3 style=text-align:center;font-size:30px;color:rgb(59,56,71)>{{'MORE_DETAILS'|translate}}</h3>
-
-<div style=margin-right:15%;margin-left:20%;font-size:22px;font-weight:bold;color:rgb(59,56,71)>
-
-  <div style=display:flex;>
-    <h2 style=float:left;padding-right:2%>1</h2>
-    <p style=float:right;padding-left:3%> 
-      {{'DETAILS_1'|translate}}
-      </p><br>
-  </div>
-
-  <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>2</h2>
-    <p style=float:right;padding-left:3%>
-        {{'DETAILS_2'|translate}}
-    </p><br>
-  </div>
-
-    
-  <!-- <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>3</h2>
-    <p style=float:right;padding-left:3%> 
-        {{'DETAILS_3'|translate}}
-      </p>
-  </div> -->
-
-
-  <div style=display:flex>
-    <h2 style=float:left;padding-right:2%>3</h2>
-    <p style=float:right;padding-left:3%> 
-        {{'DETAILS_4'|translate}}
-      </p>
-  </div>
-  <br><br><br><br>
-</div>
-
-
-
