--- a/src/app/principles/principles.component.html
+++ b/src/app/principles/principles.component.html
@@ -1,58 +1,93 @@
-<div class=protest style=height:15em>
-  <div style=padding-top:4em;>
-    <h1 style=margin-left:auto;margin-right:auto;border:6px;border-radius:25px;border-style:solid;border-color:green;background:white;margin-top:0;width:fit-content;text-align:center>
-      <strong style=font-size:60px;color:purple;margin-right:1em;margin-left:1em>{{'PRINCIPLES_TITLE'|translate}}</strong>
-    </h1>
-  </div>
+
+<div class="title principles__title">
+  <h1>{{'PRINCIPLES_TITLE'|translate}}</h1>
 </div>
 
-<div style=text-align:center;margin-left:15%;margin-right:15%;color:rgb(59,56,71)>
-  <br><br>
+<div class="section">
 
-  <h2>{{'PRINCIPLE_1'|translate}}</h2>
-  {{'PRINCIPLE_1_TEXT'|translate}}
-  <br><br><br><br>
+  <table class="principles__table">
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 1</h3></td>
+      <td>
+        <h3>{{'PRINCIPLE_1'|translate}}</h3>
+        <p>{{'PRINCIPLE_1_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_2'|translate}}</h2>
-  {{'PRINCIPLE_2_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 2</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_2'|translate}}</h3>
+        <p>{{'PRINCIPLE_2_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 3</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_3'|translate}}</h3>
+        <p>{{'PRINCIPLE_3_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_3'|translate}}</h2>
-  {{'PRINCIPLE_3_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 4</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_4'|translate}}</h3>
+        <p>{{'PRINCIPLE_4_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_4'|translate}}</h2>
-  {{'PRINCIPLE_4_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 5</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_5'|translate}}</h3>
+        <p>{{'PRINCIPLE_5_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_5'|translate}}</h2>
-  {{'PRINCIPLE_5_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 6</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_6'|translate}}</h3>
+        <p>{{'PRINCIPLE_6_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_6'|translate}}</h2>
-  {{'PRINCIPLE_6_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 7</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_7'|translate}}</h3>
+        <p>{{'PRINCIPLE_7_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_7'|translate}}</h2>
-  {{'PRINCIPLE_7_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 8</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_8'|translate}}</h3>
+        <p>{{'PRINCIPLE_8_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_8'|translate}}</h2>
-  {{'PRINCIPLE_8_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 9</h3></td>
+      <td>
+        <h3>  {{'PRINCIPLE_9'|translate}}</h3>
+        <p>{{'PRINCIPLE_9_TEXT'|translate}}</p>
+      </td>
+    </tr>
 
-  <h2>  {{'PRINCIPLE_9'|translate}}</h2>
-  {{'PRINCIPLE_9_TEXT'|translate}}
-  <br><br><br><br>
-
-  <h2>{{'PRINCIPLE_10'|translate}}</h2>
-  {{'PRINCIPLE_10_TEXT'|translate}}
-  <br><br><br><br>
+    <tr>
+      <td><h3 class="principle__bullet">{{'PRINCIPLE'|translate}} 10</h3></td>
+      <td>
+        <h3>{{'PRINCIPLE_10'|translate}}</h3>
+        <p>{{'PRINCIPLE_10_TEXT'|translate}}</p>
+      </td>
+    </tr>
+  </table>
 
   <h2>{{'PRINCIPLE_REMARKS'|translate}}</h2>
-  {{'PRINCIPLE_REMARKS_TEXT'|translate}}<a href="https://rebellion.earth/who-we-are/#principles">https://rebellion.earth/who-we-are/#principles</a>
-  <br><br>
 
   {{'PRINCIPLE_REMARKS_TEXT_2'|translate}}
   <br><br>
@@ -68,4 +103,7 @@
 
   {{'PRINCIPLE_REMARKS_TEXT_6'|translate}}
   <br><br>
+
+  Reference: <a href="https://rebellion.earth/who-we-are/#principles">https://rebellion.earth/who-we-are/#principles</a>
+
 </div>
