--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,3 +14,6 @@ $green__light: #4ac447;
 $yellow:              #ffd76e;
 $yellow__transparent: #ffd76e88;
 $darkyellow:          #C29728;
+
+
+$text-muted: #888;
