--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -43,6 +43,15 @@ p {
   font-size: 18px;
 }
 
+.text-small {
+  font-size: 16px;
+}
+.text-medium {
+  font-size: 18px;
+}
+.text-large {
+  font-size: 20px;
+}
 
 
 .text-center {
