--- a/src/app/demands/demands.component.css
+++ b/src/app/demands/demands.component.css
@@ -1,10 +1,10 @@
 
-p {
-  border-left: 2px solid #CCCCCC;
+.demands__title {
+  background-color: black;
 }
-
-.skulls {
-  background-image: url("https://storage.googleapis.com/xrcanada/xr_tree_banner.png");
-  background-repeat: repeat;
-  background-size: 100% 100%
+.demands__title h1 {
+  color: white;
+  margin: 0;
+  font-size: 4em;
+  padding: 1em 0;
 }
