quebec: add contact email

--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -23,6 +23,7 @@
         <a class="h1" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">
             Rejoignez nous
         </a>
+        <span>(ou contactez nous à <a href="mailto:outreach.xrqc@protonmail.com">outreach.xrqc@protonmail.com</a>)</span>
     </div>
     <br>
 
