quebec: insert actionnetwork widget

--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -27,6 +27,11 @@
     </div>
     <br>
 
+    <h2>Donner</h2>
+    <div id='{{ id }}' style='width: 100%'>
+        <!-- this div is the target for actionnetwork HTML insertion -->
+    </div>
+
     <h2>Prenez l'initiative</h2>
 
     <p>
