added donate link

--- a/src/app/provinces/alberta/alberta.component.html
+++ b/src/app/provinces/alberta/alberta.component.html
@@ -1,7 +1,7 @@
 <div style=text-align:center>
     <h1 style=color:#3aaa37;font-size:72px>XR ALBERTA</h1>
     <br><br>
-    <h3>Alberta Facebook Page:</h3> https://www.facebook.com/XRAlberta/
+    <h2>Facebook Page:</h2> https://www.facebook.com/XRAlberta/
     <br><br>
     <h2>Calgary Group:</h2>
     Facebook: https://www.facebook.com/XRYYC<br>
@@ -10,5 +10,5 @@
     <h2>Edmonton Group:</h2>
     Facebook: https://www.facebook.com/XREdmonton/<br>
     Email: xr_edmonton@protonmail.com<br>
-    <br>
+    <br><br><br><br><br><br>
 </div>
