--- a/src/app/provinces/ontario/ontario.component.html
+++ b/src/app/provinces/ontario/ontario.component.html
@@ -1,4 +1,17 @@
 <div style=text-align:center>
     <h1 style=color:#3aaa37;font-size:72px>XR ONTARIO</h1>
-    <h4>Content Coming Soon!</h4><br><br><br><br><br><br><br>
+
+      <img style=height:20em;width:20em src="https://storage.googleapis.com/xrcanada/image-2ab077a2-b064-413b-a972-29c64f0bef7d.jpg">
+
+      <h2>Sign up form on Action Network::</h2> 
+      https://actionnetwork.org/forms/sign-up-to-extinction-rebellion-ontario
+      
+      <h2>Facebook::</h2>
+      https://m.facebook.com/extinctionrebellionontario/
+
+      <h2>FundRaiser::</h2>
+      https://www.gofundme.com/extinction-rebellion-ontario
+      
+      <h2>Contact Us</h2>
+      Email:: extinctionrebellionontario@protonmail.com<br><br><br><br><br><br><br>
 </div>
