--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -1,5 +1,6 @@
 <div class="section">
     <h1 class="text-center">XR QUEBEC</h1>
+    <br><br>
 
     <h2>SE REBELLER POUR <span class="text-green">LA VIE</span></h2>
 
@@ -29,10 +30,12 @@
 
     <br>
 
+
     <h2>Donner</h2>
-    <div id='{{ id }}' style='width: 100%'>
-        <!-- this div is the target for actionnetwork HTML insertion -->
-    </div>
+    <p>
+        XR Qubec est une association à but non lucratif. Les dons nous aident à organiser, à recruter de l'aide professionnelle quand necéssaire et à créer du matériel pour nos actions.
+    </p>
+    <button mat-button style=background:#3AAA37;color:white;width:10em (click)=donate()>Cliquez Ici</button>
 
     <h2>Prenez l'initiative</h2>
 
