--- a/src/app/provinces/quebec/quebec.component.html
+++ b/src/app/provinces/quebec/quebec.component.html
@@ -1,6 +1,7 @@
-<div class="section">
-    <h1 class="text-center">XR QUEBEC</h1>
-    <br><br>
+<div class="title quebec__title">
+    <h1 class="text-center">XR QUÉBEC</h1>
+</div>
+<div class="section section--paddingSmall">
 
     <h2>SE REBELLER POUR <span class="text-green">LA VIE</span></h2>
 
@@ -17,25 +18,38 @@
     <h2>S'ENGAGER</h2>
     <p>
         Vous avez envie de rejoindre notre équipe d’organisation et faire avancer les choses ? <br>
-        Participer à organiser une action, former un groupe local sont autant de manières de s’engager pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés.<br><br>
+        Participer à organiser une action, former un groupe local sont autant de manières de s’engager pour lesquelles le temps et la variété de talents dont vous disposez sont appréciés.
     </p>
 
+</div>
+<div class="action-section">
+
     <div class="text-center">
-        <a class="h2" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">
-            Rejoignez nous
+        <a class="action-link" href="https://actionnetwork.org/forms/page-dacceuil-a-xr-qc?source=direct_link" target="_blank">
+            Rejoignez-nous!
         </a>
-        <span>(ou contactez nous à <a href="mailto:outreach.xrqc@protonmail.com">outreach.xrqc@protonmail.com</a>)</span>
+        <span>(ou contactez-nous à <a class="text-yellow text-bold" href="mailto:outreach.xrqc@protonmail.com">outreach.xrqc@protonmail.com</a>)</span>
     </div>
 
-
-    <br>
-
+</div>
+<div class="section section--paddingSmall">
 
     <h2>Donner</h2>
     <p>
-        XR Qubec est une association à but non lucratif. Les dons nous aident à organiser, à recruter de l'aide professionnelle quand necéssaire et à créer du matériel pour nos actions.
+        XR Québec est une association à but non lucratif. Les dons nous aident à organiser, à recruter de l'aide professionnelle quand necéssaire et à créer du matériel pour nos actions.
     </p>
-    <button mat-button style=background:#3AAA37;color:white;width:10em (click)=donate()>Cliquez Ici</button>
+
+</div>
+<div class="action-section">
+
+    <div class="text-center">
+        <a class="action-link" href="https://actionnetwork.org/fundraising/soutenez-financierement-extinction-rebellion-quebec/" target="_blank">
+            Faire un don
+        </a>
+    </div>
+
+</div>
+<div class="section section--paddingSmall">
 
     <h2>Prenez l'initiative</h2>
 
@@ -76,9 +90,22 @@
     </p>
 
     <h2>Ressources</h2>
-    <ul>
-        <li> <a href="https://www.facebook.com/Extinction.Rebellion.QC/"> Facebook</a> </li>
-        <li> <a href="https://twitter.com/XR_Quebec">Twitter</a> </li>
-        <li> <a href="https://www.instagram.com/extinctionrebellion/"> Instagram</a> </li>
+
+    <ul class="quebec__social">
+        <li>
+            <a class="social-link" href="https://www.facebook.com/Extinction.Rebellion.QC/">
+                <i class="social-icon social-icon--facebook fa fa-facebook"></i> Extinction.Rebellion.QC
+            </a>
+        </li>
+        <li>
+            <a class="social-link" href="https://twitter.com/XR_Quebec">
+                <i class="social-icon social-icon--twitter fa fa-twitter"></i> @XR_Quebec
+            </a>
+        </li>
+        <li>
+            <a class="social-link" href="https://www.instagram.com/extinctionrebellion/">
+                <i class="social-icon social-icon--instagram fa fa-instagram"></i> @extinctionrebellion
+            </a>
+        </li>
     </ul>
 </div>
