--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -13,6 +13,7 @@ $green__light: #4ac447;
 
 $yellow:              #ffd76e;
 $yellow__transparent: #ffd76e88;
+$yellow__saturated:   rgb(255, 196, 0);
 $darkyellow:          #C29728;
 
 
