--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
   <img class="header__bar__logo" src="https://storage.googleapis.com/xrcanada/xr-logo-white">
 
   <div class="header__bar__links">
-    <button class="header__bar__link" [class.header__bar__link--active]="router.url === ''"            (click)="route('/')">{{'HOME'|translate}}</button>
+    <button class="header__bar__link" [class.header__bar__link--active]="router.url === '/'"           (click)="route('/')">{{'HOME'|translate}}</button>
     <button class="header__bar__link" [class.header__bar__link--active]="router.url === '/demands'"    (click)="route('/demands')">{{'DEMANDS'|translate}}</button>
     <button class="header__bar__link" [class.header__bar__link--active]="router.url === '/principles'" (click)="route('/principles')">{{'PRINCIPLES'|translate}}</button>
     <button class="header__bar__link" [class.header__bar__link--active]="router.url === '/who'"        (click)="route('/who')">{{'WHO'|translate}}</button>
@@ -38,16 +38,16 @@
       </div>
       <div class="footer__social">
         <a class="footer__social__link" href="https://www.facebook.com/ExtinctionRebellionCanada/">
-          <i class="footer__icon footer__icon--facebook fa fa-facebook"></i> Facebook
+          <i class="social-icon social-icon--facebook fa fa-facebook"></i> Facebook
         </a>
         <a class="footer__social__link" href="https://twitter.com/xrebelcanada">
-          <i class="footer__icon footer__icon--twitter fa fa-twitter"></i> Twitter
+          <i class="social-icon social-icon--twitter fa fa-twitter"></i> Twitter
         </a>
         <a class="footer__social__link" href="https://www.youtube.com/channel/UCYThdLKE6TDwBJh-qDC6ICA">
-          <i class="footer__icon footer__icon--youtube fa fa-youtube"></i> Youtube
+          <i class="social-icon social-icon--youtube fa fa-youtube"></i> Youtube
         </a>
         <a class="footer__social__link" href="https://www.instagram.com/extinctionrebellioncanada">
-          <i class="footer__icon footer__icon--instagram fa fa-instagram"></i> Instagram
+          <i class="social-icon social-icon--instagram fa fa-instagram"></i> Instagram
         </a>
       </div>
     </div>
