--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -51,3 +51,48 @@ app-root {
   content: counter(li-counter);
   counter-increment: li-counter;
 }
+
+
+
+
+.social-icon {
+  padding: 7px;
+  font-size: 18px;
+  text-align: center;
+  text-decoration: none;
+  margin-right: 1em;
+  border-radius: 50%;
+  color: #fff;
+  width: 30px;
+  height: 30px;
+  line-height: 18px;
+}
+
+.social-icon:hover {
+  opacity: .7;
+}
+
+.social-icon--facebook {
+  background: #3b5998;
+  color: #fff;
+}
+
+.social-icon--twitter {
+  background: #55acee;
+  color: #fff;
+}
+
+.social-icon--youtube {
+  background: #b00;
+  color: #fff;
+}
+
+.social-icon--instagram {
+  background: #125688;
+  color: #fff;
+}
+
+.social-icon--pinterest {
+  background: #cb2027;
+  color: #fff;
+}
