--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -65,3 +65,10 @@ p {
 .text-muted {
   color: $lightgray;
 }
+.text-yellow {
+  color: $yellow__saturated;
+}
+
+.text-bold {
+  font-weight: bold;
+}
