Basic fix for mobile.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class=home__skulls style=height:15em>
+<div class=home__skulls>
   <h1 class=home__hero>XR CANADA</h1>
 </div>
 
@@ -56,4 +56,3 @@
   </div>
 
 </div>
-
