--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -30,10 +30,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 50px;
   width: 100%;
-  padding: 0 8em;
   background: $green;
+  flex-wrap: wrap;
+  padding-bottom: 10px;
 }
 .header__bar__logo {
   height: 50px;
@@ -44,8 +44,10 @@
   flex: 1;
 }
 .header__bar__links {
-  height: 50px;
   white-space: nowrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 .header__bar__link {
   font-family: 'fucxed', sans-serif;
@@ -63,7 +65,15 @@
   margin: 0;
   margin-right: 1em;
   transition: all .15s;
+  padding-bottom: 10px;
+  padding-top: 10px;
 }
+@media (min-width: 600px) {
+  .header__bar {
+    padding-bottom: 30px;
+  }
+}
+
 @media (max-width: 1125px) {
   .header__bar__link {
     font-size: 16px;
@@ -112,8 +122,9 @@
 
 .footer__content {
   font-size: 18px;
-  width: 600px;
+  max-width: 600px;
   margin: auto;
+  padding: 0 20px;
 }
 
 .footer__content__main {
