--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,14 +12,14 @@
   color: $green;
   text-align: center;
   margin: 0;
-  padding-top: 0.5em;
-  font-size: 120px;
+  font-size: 80px;
+  padding: 15px 0 0;
 }
 
 .home__section {
-  width: 800px;
+  max-width: 800px;
   margin: 0 auto;
-  padding: 72px 0;
+  padding: 72px 10px;
 }
 
 .home__title {
@@ -44,7 +44,7 @@
   font-size: 48px;
   line-height: 1.3;
   padding: 2em 0;
-  width: 850px;
+  max-width: 850px;
   margin: 0 auto;
 }
 
@@ -98,7 +98,18 @@
     font-size: 16px;
   }
 }
+
+@media (min-width: 600px) {
+  .home__skulls {
+    height: 15em;
+  }
+  .home__hero {
+    font-size: 120px;
+    padding-top: 0.5em;
+  }
+}
 @media (min-width: 800px) {
+
   .home__boxes__box--text h3 {
     font-size: 20px;
   }
